# bavaria

./: .gitignore  GEMINI.md  UV_SETUP.md  classify_municipalities.py  compare_mode_choice.py  config_bavaria.yml  config_bavaria_10pct.yml  config_bavaria_1pct.yml  config_bavaria_25pct.yml  config_kelheim_100pct.yml  config_kelheim_1pct.yml  config_kelheim_30km_100pct.yml  config_kelheim_30km_10pct.yml  config_kelheim_30km_1pct.yml  fix_work_locations.py  plot_radius_tiers.py  plot_radius_tiers_static.py  pyproject.toml  requirements.txt  run_batch.py  run_full_pipeline.sh
.planning/: 2026-03-17-scenario-generation-calibration.md  2026-03-18-distance-calibration-and-mode-choice.md  2026-03-23-commuter-od-matrix-calibration.md
bavaria/gravity/: model.py  pendler_data.py
bavaria/ipf/: model.py
calibration/boptx/: auto_followup.sh  build_niederbayern_target.py  calibrate.py  calibrate_10pct.py  calibrate_base.py  calibrate_eqasim_asc_only.py  calibrate_eqasim_base.py  calibrate_eqasim_v2.py  calibrated_asc.yml  calibrated_asc_4param.yml  check_mode_shares.py  diagnose_population.py  export_calibrated_asc.py  extract_diagnostics.py  link_flow_objective.py  matsim_mode_share_objective.py  monitor_calibration.sh  run_eqasim_base_10pct.sh  score_modes_per_band.py
data/osm/: cleaned.py  (+1 more)
scripts/: _r.py  _run.py  compare_commuter_od.py  download_data.py  download_files.md  filter_population_by_radius.py  plot_od_comparison.py  plot_od_map.py  validate_pendler_od.py  validate_quick.py
synthesis/: output.py
tests/: test_pendler_data.py  test_pendler_gravity.py
(+34 files in other folders)
