[project]
name = "bavaria-scenario"
version = "1.0.0"
description = "Synthetic population for Bavaria based on open data"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "eqasim-org" }
]
dependencies = [
    "matplotlib==3.7.1",
    "pandas==1.5.3",
    "scipy==1.10.1",
    "numpy==1.23.5",
    "geopandas==1.0.1",
    "numba==0.56.4",
    "palettable==3.3.0",
    "scikit-learn==1.2.2",
    "shapely==2.0.6",
    "tqdm==4.65.0",
    "tables==3.9.2",
    "xlrd==2.0.1",
    "openpyxl==3.1.0",
    "py7zr==0.20.8",
    "pytest==7.2.2",
    "xlwt==1.3.0",
    "fiona==1.10.1",
    "mock==5.1.0",
    "pyarrow==16.1.0",
    "pyrosm==0.6.2",
    "statsmodels==0.14.3",
    "requests==2.32.3",
    "pyogrio==0.10.0",
    "synpp==1.5.1",
    "bhepop2==2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.2",
    "ipykernel>=6.29.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
